//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.rec.grpc;

message PingRequest {
}

message PingResponse {
	string output = 1;
}

message ReadRequest {
	string name = 1;
}

message ReadResponse {
	string value = 1;
}

message WriteRequest {
	string name = 1;
	string value = 2;
}

message WriteResponse {
	string status = 1;
}

message CleanRequest {
}

message CleanResponse {
	string status = 1;
}

service RecordService {
  rpc ping(PingRequest) returns (PingResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  rpc write(WriteRequest) returns (WriteResponse);
  rpc clean(CleanRequest) returns (CleanResponse);
}